@@ -96,14 +96,7 @@ else if ($ERROR_CODE == 603) {
 // system error
 else {
     $__error_title = "SERVICE CURRENTLY NOT AVAILABLE!";
-    $__error_text  = "Please contact your server-administrator.";
-
-    if (($rcmail->config->get('debug_level') & 4) && $ERROR_MESSAGE) {
-        $__error_text = $ERROR_MESSAGE;
-    }
-    else {
-        $__error_text = sprintf('Error No. [%s]', $ERROR_CODE);
-    }
+    $__error_text  = sprintf('Error No. [%s]', $ERROR_CODE);
 }
 
 // inform plugins
